WFLY-18857 Replace wildfly clustering modules with versions from wildfly-clustering