@@ -11,12 +11,15 @@ import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -44,18 +47,17 @@ import io.undertow.server.session.SessionListeners;
 import io.undertow.servlet.handlers.security.CachedAuthenticatedSessionHandler;
 import io.undertow.util.Protocols;
 
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
-import org.wildfly.clustering.ee.Batch;
-import org.wildfly.clustering.ee.BatchContext;
-import org.wildfly.clustering.ee.Batcher;
-import org.wildfly.clustering.ee.Recordable;
-import org.wildfly.clustering.web.session.ImmutableSessionMetaData;
-import org.wildfly.clustering.web.session.Session;
-import org.wildfly.clustering.web.session.SessionAttributes;
-import org.wildfly.clustering.web.session.SessionManager;
-import org.wildfly.clustering.web.session.SessionMetaData;
+import org.wildfly.clustering.cache.batch.Batch;
+import org.wildfly.clustering.cache.batch.BatchContext;
+import org.wildfly.clustering.cache.batch.SuspendedBatch;
+import org.wildfly.clustering.session.ImmutableSessionMetaData;
+import org.wildfly.clustering.session.Session;
+import org.wildfly.clustering.session.SessionManager;
+import org.wildfly.clustering.session.SessionMetaData;
 import org.xnio.OptionMap;
 import org.xnio.StreamConnection;
 import org.xnio.channels.Configurable;
@@ -74,47 +76,49 @@ public class DistributableSessionTestCase {
     private final UndertowSessionManager manager = mock(UndertowSessionManager.class);
     private final SessionConfig config = mock(SessionConfig.class);
     private final Session<Map<String, Object>> session = mock(Session.class);
-    private final Batch batch = mock(Batch.class);
+    private final SuspendedBatch suspendedBatch = mock(SuspendedBatch.class);
     private final Consumer<HttpServerExchange> closeTask = mock(Consumer.class);
     private final RecordableSessionManagerStatistics statistics = mock(RecordableSessionManagerStatistics.class);
+
+    @After
+    public void destroy() {
+        reset(this.metaData, this.manager, this.config, this.session, this.suspendedBatch, this.closeTask, this.statistics);
+    }
 
     @Test
     public void getId() {
         String id = "id";
 
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        when(this.session.getId()).thenReturn(id);
+        doReturn(id).when(this.session).getId();
 
         String result = session.getId();
+
+        verifyNoInteractions(this.suspendedBatch);
 
         assertSame(id, result);
     }
 
     @Test
-    public void requestDone() {
+    public void newSessionRequestDone() {
         Instant creationTime = Instant.now();
-        // New session
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(true);
-        when(this.metaData.getCreationTime()).thenReturn(creationTime);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(true).when(this.metaData).isNew();
+        doReturn(creationTime).when(this.metaData).getCreationTime();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
         HttpServerExchange exchange = new HttpServerExchange(null);
+        Batch batch = mock(Batch.class);
         ArgumentCaptor<Instant> capturedLastAccessStartTime = ArgumentCaptor.forClass(Instant.class);
         ArgumentCaptor<Instant> capturedLastAccessEndTime = ArgumentCaptor.forClass(Instant.class);
 
-        when(this.session.isValid()).thenReturn(true);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(batch).when(this.suspendedBatch).resume();
+        doReturn(true).when(this.session).isValid();
         doNothing().when(this.metaData).setLastAccess(capturedLastAccessStartTime.capture(), capturedLastAccessEndTime.capture());
 
         session.requestDone(exchange);
@@ -127,362 +131,279 @@ public class DistributableSessionTestCase {
         Assert.assertFalse(lastAccessStartTime.isAfter(lastAccessEndTime));
 
         verify(this.session).close();
-        verify(this.batch).close();
-        verify(context).close();
+        verify(batch).close();
         verify(this.closeTask).accept(exchange);
+    }
 
-        reset(this.batch, this.session, this.metaData, context, this.closeTask);
+    @Test
+    public void existingSessionRequestDone() {
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        capturedLastAccessStartTime = ArgumentCaptor.forClass(Instant.class);
-        capturedLastAccessEndTime = ArgumentCaptor.forClass(Instant.class);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        // Existing session
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        HttpServerExchange exchange = new HttpServerExchange(null);
+        Batch batch = mock(Batch.class);
+        ArgumentCaptor<Instant> capturedLastAccessStartTime = ArgumentCaptor.forClass(Instant.class);
+        ArgumentCaptor<Instant> capturedLastAccessEndTime = ArgumentCaptor.forClass(Instant.class);
 
-        session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
-
-        when(this.session.isValid()).thenReturn(true);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(batch).when(this.suspendedBatch).resume();
+        doReturn(true).when(this.session).isValid();
         doNothing().when(this.metaData).setLastAccess(capturedLastAccessStartTime.capture(), capturedLastAccessEndTime.capture());
 
         session.requestDone(exchange);
 
-        lastAccessStartTime = capturedLastAccessStartTime.getValue();
-        lastAccessEndTime = capturedLastAccessEndTime.getValue();
+        Instant lastAccessStartTime = capturedLastAccessStartTime.getValue();
+        Instant lastAccessEndTime = capturedLastAccessEndTime.getValue();
 
         Assert.assertNotSame(lastAccessStartTime, lastAccessEndTime);
         Assert.assertFalse(lastAccessStartTime.isAfter(lastAccessEndTime));
 
         verify(this.metaData).setLastAccess(any(Instant.class), any(Instant.class));
         verify(this.session).close();
-        verify(this.batch).close();
-        verify(context).close();
+        verify(batch).close();
         verify(this.closeTask).accept(exchange);
+    }
 
-        reset(this.batch, this.session, this.metaData, context, this.closeTask);
+    @Test
+    public void invalidSessionRequestDone() {
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        // Invalid session, closed batch
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(true);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        verify(this.metaData).isNew();
 
-        when(this.session.isValid()).thenReturn(false);
-        when(this.batch.getState()).thenReturn(Batch.State.CLOSED);
+        HttpServerExchange exchange = new HttpServerExchange(null);
+        Batch batch = mock(Batch.class);
+
+        doReturn(batch).when(this.suspendedBatch).resume();
+        doReturn(false).when(this.session).isValid();
 
         session.requestDone(exchange);
 
+        verifyNoMoreInteractions(this.metaData);
         verify(this.session).close();
-        verify(this.batch).close();
-        verify(context).close();
-        verify(this.closeTask).accept(exchange);
-
-        reset(this.batch, this.session, this.metaData, context, this.closeTask);
-
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(true);
-
-        session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
-
-        // Invalid session, active batch
-        when(this.session.isValid()).thenReturn(false);
-        when(this.batch.getState()).thenReturn(Batch.State.ACTIVE);
-
-        session.requestDone(exchange);
-
-        verify(this.session).close();
-        verify(this.batch).close();
-        verify(context).close();
+        verify(batch).close();
         verify(this.closeTask).accept(exchange);
     }
 
     @Test
     public void getCreationTime() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionMetaData metaData = mock(SessionMetaData.class);
         Instant now = Instant.now();
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getMetaData()).thenReturn(metaData);
-        when(metaData.getCreationTime()).thenReturn(now);
+        doReturn(now).when(this.metaData).getCreationTime();
 
         long result = session.getCreationTime();
 
         assertEquals(now.toEpochMilli(), result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getMetaData();
 
         assertThrows(IllegalStateException.class, () -> session.getCreationTime());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void getLastAccessedTime() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionMetaData metaData = mock(SessionMetaData.class);
         Instant now = Instant.now();
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getMetaData()).thenReturn(metaData);
-        when(metaData.getLastAccessStartTime()).thenReturn(now);
+        doReturn(now).when(this.metaData).getLastAccessStartTime();
 
         long result = session.getLastAccessedTime();
 
         assertEquals(now.toEpochMilli(), result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getMetaData();
 
         assertThrows(IllegalStateException.class, () -> session.getLastAccessedTime());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void getMaxInactiveInterval() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionMetaData metaData = mock(SessionMetaData.class);
         long expected = 3600L;
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getMetaData()).thenReturn(metaData);
-        when(metaData.getTimeout()).thenReturn(Duration.ofSeconds(expected));
+        doReturn(Duration.ofSeconds(expected)).when(this.metaData).getTimeout();
 
         long result = session.getMaxInactiveInterval();
 
         assertEquals(expected, result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getMetaData();
 
         assertThrows(IllegalStateException.class, () -> session.getMaxInactiveInterval());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void setMaxInactiveInterval() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         int interval = 3600;
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionMetaData metaData = mock(SessionMetaData.class);
-
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getMetaData()).thenReturn(metaData);
-
         session.setMaxInactiveInterval(interval);
 
-        verify(metaData).setTimeout(Duration.ofSeconds(interval));
+        verify(this.metaData).setTimeout(Duration.ofSeconds(interval));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getMetaData();
 
         assertThrows(IllegalStateException.class, () -> session.setMaxInactiveInterval(interval));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void getAttributeNames() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         Set<String> expected = Collections.singleton("name");
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.getAttributeNames()).thenReturn(expected);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).keySet();
 
         Object result = session.getAttributeNames();
 
         assertSame(expected, result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.getAttributeNames());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void getAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         Object expected = new Object();
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.getAttribute(name)).thenReturn(expected);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).get(name);
 
         Object result = session.getAttribute(name);
 
         assertSame(expected, result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.getAttribute(name));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void getAuthenticatedSessionAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = CachedAuthenticatedSessionHandler.class.getName() + ".AuthenticatedSession";
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         Account account = mock(Account.class);
         AuthenticatedSession auth = new AuthenticatedSession(account, HttpServletRequest.FORM_AUTH);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.getAttribute(name)).thenReturn(auth);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(auth).when(attributes).get(name);
 
         AuthenticatedSession result = (AuthenticatedSession) session.getAttribute(name);
 
         assertSame(account, result.getAccount());
         assertSame(HttpServletRequest.FORM_AUTH, result.getMechanism());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         AuthenticatedSession expected = new AuthenticatedSession(account, HttpServletRequest.BASIC_AUTH);
         Map<String, Object> localContext = Collections.singletonMap(name, expected);
 
-        when(attributes.getAttribute(name)).thenReturn(null);
-        when(this.session.getLocalContext()).thenReturn(localContext);
+        doReturn(null).when(attributes).get(name);
+        doReturn(localContext).when(this.session).getContext();
 
         result = (AuthenticatedSession) session.getAttribute(name);
 
         assertSame(expected, result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.getAttribute(name));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
@@ -493,57 +414,45 @@ public class DistributableSessionTestCase {
     }
 
     private void getLocalContextSessionAttribute(String name) {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
+        Map<String, Object> attributes = mock(Map.class);
         Object expected = new Object();
         Map<String, Object> localContext = Collections.singletonMap(name, expected);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getLocalContext()).thenReturn(localContext);
+        doReturn(localContext).when(this.session).getContext();
 
         Object result = session.getAttribute(name);
 
         assertSame(expected, result);
 
-        verify(attributes, never()).getAttribute(name);
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
+        verify(attributes, never()).get(name);
     }
 
     @Test
     public void setAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
         Integer value = 1;
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
 
         Object expected = new Object();
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.setAttribute(name, value)).thenReturn(expected);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).put(name, value);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.setAttribute(name, value);
 
@@ -552,46 +461,38 @@ public class DistributableSessionTestCase {
         verify(listener, never()).attributeAdded(session, name, value);
         verify(listener).attributeUpdated(session, name, value, expected);
         verify(listener, never()).attributeRemoved(same(session), same(name), any());
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.setAttribute(name, value));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void setNewAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
         Integer value = 1;
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
         Object expected = null;
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.setAttribute(name, value)).thenReturn(expected);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).put(name, value);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.setAttribute(name, value);
 
@@ -600,34 +501,28 @@ public class DistributableSessionTestCase {
         verify(listener).attributeAdded(session, name, value);
         verify(listener, never()).attributeUpdated(same(session), same(name), same(value), any());
         verify(listener, never()).attributeRemoved(same(session), same(name), any());
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void setNullAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
         Object value = null;
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
         Object expected = new Object();
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.removeAttribute(name)).thenReturn(expected);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).remove(name);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.setAttribute(name, value);
 
@@ -636,34 +531,28 @@ public class DistributableSessionTestCase {
         verify(listener, never()).attributeAdded(session, name, value);
         verify(listener, never()).attributeUpdated(same(session), same(name), same(value), any());
         verify(listener).attributeRemoved(session, name, expected);
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void setSameAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
         Integer value = 1;
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
         Object expected = value;
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.setAttribute(name, value)).thenReturn(expected);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).put(name, value);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.setAttribute(name, value);
 
@@ -672,33 +561,27 @@ public class DistributableSessionTestCase {
         verify(listener, never()).attributeAdded(session, name, value);
         verify(listener, never()).attributeUpdated(same(session), same(name), same(value), any());
         verify(listener, never()).attributeRemoved(same(session), same(name), any());
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void setAuthenticatedSessionAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = CachedAuthenticatedSessionHandler.class.getName() + ".AuthenticatedSession";
         Account account = mock(Account.class);
         AuthenticatedSession auth = new AuthenticatedSession(account, HttpServletRequest.FORM_AUTH);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         Account oldAccount = mock(Account.class);
         AuthenticatedSession oldAuth = new AuthenticatedSession(oldAccount, HttpServletRequest.FORM_AUTH);
         ArgumentCaptor<AuthenticatedSession> capturedAuth = ArgumentCaptor.forClass(AuthenticatedSession.class);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.setAttribute(same(name), capturedAuth.capture())).thenReturn(oldAuth);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(oldAuth).when(attributes).put(same(name), capturedAuth.capture());
 
         AuthenticatedSession result = (AuthenticatedSession) session.setAttribute(name, auth);
 
@@ -708,15 +591,15 @@ public class DistributableSessionTestCase {
         assertSame(oldAccount, result.getAccount());
         assertSame(HttpServletRequest.FORM_AUTH, result.getMechanism());
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
 
-        reset(context, attributes);
+        reset(attributes);
 
         capturedAuth = ArgumentCaptor.forClass(AuthenticatedSession.class);
 
-        when(attributes.setAttribute(same(name), capturedAuth.capture())).thenReturn(null);
+        doReturn(null).when(attributes).put(same(name), capturedAuth.capture());
 
         result = (AuthenticatedSession) session.setAttribute(name, auth);
 
@@ -725,11 +608,11 @@ public class DistributableSessionTestCase {
 
         assertNull(result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
 
-        reset(context, attributes);
+        reset(attributes);
 
         auth = new AuthenticatedSession(account, HttpServletRequest.BASIC_AUTH);
         AuthenticatedSession oldSession = new AuthenticatedSession(oldAccount, HttpServletRequest.BASIC_AUTH);
@@ -737,22 +620,21 @@ public class DistributableSessionTestCase {
         Map<String, Object> localContext = new HashMap<>();
         localContext.put(name, oldSession);
 
-        when(this.session.getLocalContext()).thenReturn(localContext);
+        doReturn(localContext).when(this.session).getContext();
 
         result = (AuthenticatedSession) session.setAttribute(name, auth);
 
         assertSame(auth, localContext.get(name));
-        verify(context).close();
+
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.setAttribute(name, oldAuth));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
@@ -763,172 +645,144 @@ public class DistributableSessionTestCase {
     }
 
     private void setLocalContextSessionAttribute(String name) {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         Object newValue = new Object();
         Object oldValue = new Object();
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
+        Map<String, Object> attributes = mock(Map.class);
         Map<String, Object> localContext = new HashMap<>();
         localContext.put(name, oldValue);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getLocalContext()).thenReturn(localContext);
+        doReturn(localContext).when(this.session).getContext();
 
         Object result = session.setAttribute(name, newValue);
 
         assertSame(oldValue, result);
 
         assertSame(newValue, localContext.get(name));
-        verify(attributes, never()).setAttribute(name, newValue);
-        verify(context).close();
+        verify(attributes, never()).put(name, newValue);
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void removeAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
         Object expected = new Object();
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.removeAttribute(name)).thenReturn(expected);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(expected).when(attributes).remove(name);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.removeAttribute(name);
 
         assertSame(expected, result);
 
         verify(listener).attributeRemoved(session, name, expected);
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.removeAttribute(name));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
 
     @Test
     public void removeNonExistingAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = "name";
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListener listener = mock(SessionListener.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
 
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.removeAttribute(name)).thenReturn(null);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(null).when(attributes).remove(name);
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         Object result = session.removeAttribute(name);
 
         assertNull(result);
 
         verify(listener, never()).attributeRemoved(same(session), same(name), any());
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void removeAuthenticatedSessionAttribute() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         String name = CachedAuthenticatedSessionHandler.class.getName() + ".AuthenticatedSession";
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         Account oldAccount = mock(Account.class);
         AuthenticatedSession oldAuth = new AuthenticatedSession(oldAccount, HttpServletRequest.FORM_AUTH);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.removeAttribute(same(name))).thenReturn(oldAuth);
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(oldAuth).when(attributes).remove(same(name));
 
         AuthenticatedSession result = (AuthenticatedSession) session.removeAttribute(name);
 
         assertSame(oldAccount, result.getAccount());
         assertSame(HttpServletRequest.FORM_AUTH, result.getMechanism());
+        verifyNoInteractions(this.suspendedBatch);
 
-        verify(context).close();
-
-        reset(context, attributes);
+        reset(attributes);
 
         Map<String, Object> localContext = new HashMap<>();
         AuthenticatedSession oldSession = new AuthenticatedSession(oldAccount, HttpServletRequest.BASIC_AUTH);
         localContext.put(name, oldSession);
-        when(attributes.removeAttribute(same(name))).thenReturn(null);
-        when(this.session.getLocalContext()).thenReturn(localContext);
+
+        doReturn(null).when(attributes).remove(same(name));
+        doReturn(localContext).when(this.session).getContext();
 
         result = (AuthenticatedSession) session.removeAttribute(name);
 
         assertSame(result, oldSession);
         assertNull(localContext.get(name));
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
 
-        reset(context, attributes);
+        reset(attributes);
 
         result = (AuthenticatedSession) session.removeAttribute(name);
 
         assertNull(result);
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session, never()).close();
         verify(this.closeTask, never()).accept(null);
-
-        reset(context);
 
         doThrow(IllegalStateException.class).when(this.session).getAttributes();
 
         assertThrows(IllegalStateException.class, () -> session.removeAttribute(name));
 
-        verify(context).close();
+        verifyNoInteractions(this.suspendedBatch);
         verify(this.session).close();
         verify(this.closeTask).accept(null);
     }
@@ -939,48 +793,40 @@ public class DistributableSessionTestCase {
     }
 
     private void removeLocalContextSessionAttribute(String name) {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         Object oldValue = new Object();
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
+        Map<String, Object> attributes = mock(Map.class);
         Map<String, Object> localContext = new HashMap<>();
         localContext.put(name, oldValue);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.session.getLocalContext()).thenReturn(localContext);
+        doReturn(localContext).when(this.session).getContext();
 
         Object result = session.removeAttribute(name);
 
         assertSame(oldValue, result);
 
         assertNull(localContext.get(name));
-        verify(attributes, never()).removeAttribute(name);
-        verify(context).close();
+        verify(attributes, never()).remove(name);
+        verifyNoInteractions(this.suspendedBatch);
     }
 
     @Test
     public void invalidate() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         HttpServerExchange exchange = new HttpServerExchange(null);
 
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
+        Batch batch = mock(Batch.class);
         SessionListener listener = mock(SessionListener.class);
-        SessionAttributes attributes = mock(SessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         SessionListeners listeners = new SessionListeners();
         listeners.addSessionListener(listener);
         String sessionId = "session";
@@ -988,18 +834,13 @@ public class DistributableSessionTestCase {
         Object attributeValue = mock(HttpSessionActivationListener.class);
         Recordable<ImmutableSessionMetaData> recorder = mock(Recordable.class);
 
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
-        when(this.session.isValid()).thenReturn(true);
-        when(this.session.getId()).thenReturn(sessionId);
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(this.batch.getState()).thenReturn(Batch.State.ACTIVE);
-        when(this.session.getAttributes()).thenReturn(attributes);
-        when(attributes.getAttributeNames()).thenReturn(Collections.singleton("attribute"));
-        when(attributes.getAttribute(attributeName)).thenReturn(attributeValue);
-        when(this.statistics.getInactiveSessionRecorder()).thenReturn(recorder);
+        doReturn(listeners).when(this.manager).getSessionListeners();
+        doReturn(true).when(this.session).isValid();
+        doReturn(sessionId).when(this.session).getId();
+        doReturn(attributes).when(this.session).getAttributes();
+        doReturn(Set.of(Map.entry("attribute", attributeValue))).when(attributes).entrySet();
+        doReturn(recorder).when(this.statistics).getInactiveSessionRecorder();
+        doReturn(batch).when(this.suspendedBatch).resume();
 
         session.invalidate(exchange);
 
@@ -1008,48 +849,45 @@ public class DistributableSessionTestCase {
         verify(this.config).clearSession(exchange, sessionId);
         verify(listener).sessionDestroyed(session, exchange, SessionDestroyedReason.INVALIDATED);
         verify(listener).attributeRemoved(session, attributeName, attributeValue);
-        verify(this.batch).close();
-        verify(context).close();
+        verify(batch).close();
         verify(this.closeTask).accept(exchange);
 
-        reset(context, this.session, this.closeTask);
+        reset(this.session, this.closeTask);
 
         doThrow(IllegalStateException.class).when(this.session).invalidate();
 
         assertThrows(IllegalStateException.class, () -> session.invalidate(exchange));
 
-        verify(context).close();
+        verify(batch, times(2)).close();
         verify(this.session).close();
         verify(this.closeTask).accept(exchange);
     }
 
     @Test
     public void getSessionManager() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         assertSame(this.manager, session.getSessionManager());
     }
 
     @Test
     public void changeSessionId() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         HttpServerExchange exchange = new HttpServerExchange(null);
         SessionConfig config = mock(SessionConfig.class);
-
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
+        BatchContext<Batch> context = mock(BatchContext.class);
+        SessionManager<Map<String, Object>> manager = mock(SessionManager.class);
         Supplier<String> identifierFactory = mock(Supplier.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
         Session<Map<String, Object>> newSession = mock(Session.class);
-        SessionAttributes oldAttributes = mock(SessionAttributes.class);
-        SessionAttributes newAttributes = mock(SessionAttributes.class);
+        Map<String, Object> oldAttributes = mock(Map.class);
+        Map<String, Object> newAttributes = mock(Map.class);
         SessionMetaData oldMetaData = mock(SessionMetaData.class);
         SessionMetaData newMetaData = mock(SessionMetaData.class);
         Map<String, Object> oldContext = new HashMap<>();
@@ -1060,32 +898,26 @@ public class DistributableSessionTestCase {
         listeners.addSessionListener(listener);
         String oldSessionId = "old";
         String newSessionId = "new";
-        String name = "name";
-        Object value = new Object();
         Instant now = Instant.now();
         Duration interval = Duration.ofSeconds(10L);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(manager.getIdentifierFactory()).thenReturn(identifierFactory);
-        when(identifierFactory.get()).thenReturn(newSessionId);
-        when(manager.createSession(newSessionId)).thenReturn(newSession);
-        when(this.session.getAttributes()).thenReturn(oldAttributes);
-        when(this.session.getMetaData()).thenReturn(oldMetaData);
-        when(newSession.getAttributes()).thenReturn(newAttributes);
-        when(newSession.getMetaData()).thenReturn(newMetaData);
-        when(oldAttributes.getAttributeNames()).thenReturn(Collections.singleton(name));
-        when(oldAttributes.getAttribute(name)).thenReturn(value);
-        when(newAttributes.setAttribute(name, value)).thenReturn(null);
-        when(oldMetaData.getLastAccessStartTime()).thenReturn(now);
-        when(oldMetaData.getLastAccessEndTime()).thenReturn(now);
-        when(oldMetaData.getTimeout()).thenReturn(interval);
-        when(this.session.getId()).thenReturn(oldSessionId);
-        when(newSession.getId()).thenReturn(newSessionId);
-        when(this.session.getLocalContext()).thenReturn(oldContext);
-        when(newSession.getLocalContext()).thenReturn(newContext);
-        when(this.manager.getSessionListeners()).thenReturn(listeners);
+        doReturn(context).when(this.suspendedBatch).resumeWithContext();
+        doReturn(manager).when(this.manager).getSessionManager();
+        doReturn(identifierFactory).when(manager).getIdentifierFactory();
+        doReturn(newSessionId).when(identifierFactory).get();
+        doReturn(newSession).when(manager).createSession(newSessionId);
+        doReturn(oldAttributes).when(this.session).getAttributes();
+        doReturn(oldMetaData).when(this.session).getMetaData();
+        doReturn(newAttributes).when(newSession).getAttributes();
+        doReturn(newMetaData).when(newSession).getMetaData();
+        doReturn(now).when(oldMetaData).getLastAccessStartTime();
+        doReturn(now).when(oldMetaData).getLastAccessEndTime();
+        doReturn(interval).when(oldMetaData).getTimeout();
+        doReturn(oldSessionId).when(this.session).getId();
+        doReturn(newSessionId).when(newSession).getId();
+        doReturn(oldContext).when(this.session).getContext();
+        doReturn(newContext).when(newSession).getContext();
+        doReturn(listeners).when(this.manager).getSessionListeners();
 
         String result = session.changeSessionId(exchange, config);
 
@@ -1093,20 +925,23 @@ public class DistributableSessionTestCase {
 
         verify(newMetaData).setLastAccess(now, now);
         verify(newMetaData).setTimeout(interval);
+        verify(newAttributes).putAll(oldAttributes);
         verify(config).setSessionId(exchange, newSessionId);
         assertEquals(oldContext, newContext);
         verify(this.session).invalidate();
         verify(newSession, never()).invalidate();
         verify(listener).sessionIdChanged(session, oldSessionId);
+        verify(this.suspendedBatch).resumeWithContext();
         verify(context).close();
+        verifyNoMoreInteractions(this.suspendedBatch);
     }
 
     public void changeSessionIdResponseCommitted() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
-        when(this.session.isValid()).thenReturn(true);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
+        doReturn(true).when(this.session).isValid();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         // Ugh - all this, just to get HttpServerExchange.isResponseStarted() to return true
         Configurable configurable = mock(Configurable.class);
@@ -1116,8 +951,8 @@ public class DistributableSessionTestCase {
         ConduitStreamSinkChannel sinkChannel = new ConduitStreamSinkChannel(configurable, sinkConduit);
         StreamConnection stream = mock(StreamConnection.class);
 
-        when(stream.getSourceChannel()).thenReturn(sourceChannel);
-        when(stream.getSinkChannel()).thenReturn(sinkChannel);
+        doReturn(sourceChannel).when(stream).getSourceChannel();
+        doReturn(sinkChannel).when(stream).getSinkChannel();
 
         ByteBufferPool bufferPool = mock(ByteBufferPool.class);
         HttpHandler handler = mock(HttpHandler.class);
@@ -1133,21 +968,19 @@ public class DistributableSessionTestCase {
 
     @Test
     public void changeSessionIdConcurrentInvalidate() {
-        when(this.session.getMetaData()).thenReturn(this.metaData);
-        when(this.metaData.isNew()).thenReturn(false);
+        doReturn(this.metaData).when(this.session).getMetaData();
+        doReturn(false).when(this.metaData).isNew();
 
-        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.batch, this.closeTask, this.statistics);
+        io.undertow.server.session.Session session = new DistributableSession(this.manager, this.session, this.config, this.suspendedBatch, this.closeTask, this.statistics);
 
         HttpServerExchange exchange = new HttpServerExchange(null);
         SessionConfig config = mock(SessionConfig.class);
-
-        SessionManager<Map<String, Object>, Batch> manager = mock(SessionManager.class);
+        BatchContext<Batch> context = mock(BatchContext.class);
+        SessionManager<Map<String, Object>> manager = mock(SessionManager.class);
         Supplier<String> identifierFactory = mock(Supplier.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        BatchContext context = mock(BatchContext.class);
         Session<Map<String, Object>> newSession = mock(Session.class);
-        SessionAttributes oldAttributes = mock(SessionAttributes.class);
-        SessionAttributes newAttributes = mock(SessionAttributes.class);
+        Map<String, Object> oldAttributes = mock(Map.class);
+        Map<String, Object> newAttributes = mock(Map.class);
         SessionMetaData oldMetaData = mock(SessionMetaData.class);
         SessionMetaData newMetaData = mock(SessionMetaData.class);
         Map<String, Object> oldContext = new HashMap<>();
@@ -1158,40 +991,36 @@ public class DistributableSessionTestCase {
         listeners.addSessionListener(listener);
         String oldSessionId = "old";
         String newSessionId = "new";
-        String name = "name";
-        Object value = new Object();
         Instant now = Instant.now();
         Duration interval = Duration.ofSeconds(10L);
 
-        when(this.manager.getSessionManager()).thenReturn(manager);
-        when(manager.getBatcher()).thenReturn(batcher);
-        when(batcher.resumeBatch(this.batch)).thenReturn(context);
-        when(manager.getIdentifierFactory()).thenReturn(identifierFactory);
-        when(identifierFactory.get()).thenReturn(newSessionId);
-        when(manager.createSession(newSessionId)).thenReturn(newSession);
-        when(this.session.getAttributes()).thenReturn(oldAttributes);
-        when(this.session.getMetaData()).thenReturn(oldMetaData);
-        when(newSession.getAttributes()).thenReturn(newAttributes);
-        when(newSession.getMetaData()).thenReturn(newMetaData);
-        when(oldAttributes.getAttributeNames()).thenReturn(Collections.singleton(name));
-        when(oldAttributes.getAttribute(name)).thenReturn(value);
-        when(newAttributes.setAttribute(name, value)).thenReturn(null);
-        when(oldMetaData.getLastAccessStartTime()).thenReturn(now);
-        when(oldMetaData.getLastAccessEndTime()).thenReturn(now);
-        when(oldMetaData.getTimeout()).thenReturn(interval);
-        when(this.session.getId()).thenReturn(oldSessionId);
-        when(newSession.getId()).thenReturn(newSessionId);
-        when(this.session.getLocalContext()).thenReturn(oldContext);
-        when(newSession.getLocalContext()).thenReturn(newContext);
+        doReturn(context).when(this.suspendedBatch).resumeWithContext();
+        doReturn(manager).when(this.manager).getSessionManager();
+        doReturn(identifierFactory).when(manager).getIdentifierFactory();
+        doReturn(newSessionId).when(identifierFactory).get();
+        doReturn(newSession).when(manager).createSession(newSessionId);
+        doReturn(oldAttributes).when(this.session).getAttributes();
+        doReturn(oldMetaData).when(this.session).getMetaData();
+        doReturn(newAttributes).when(newSession).getAttributes();
+        doReturn(newMetaData).when(newSession).getMetaData();
+        doReturn(now).when(oldMetaData).getLastAccessStartTime();
+        doReturn(now).when(oldMetaData).getLastAccessEndTime();
+        doReturn(interval).when(oldMetaData).getTimeout();
+        doReturn(oldSessionId).when(this.session).getId();
+        doReturn(newSessionId).when(newSession).getId();
+        doReturn(oldContext).when(this.session).getContext();
+        doReturn(newContext).when(newSession).getContext();
 
         doThrow(IllegalStateException.class).when(this.session).invalidate();
 
         assertThrows(IllegalStateException.class, () -> session.changeSessionId(exchange, config));
 
-        verify(context).close();
         verify(listener, never()).sessionIdChanged(session, oldSessionId);
         verify(this.session).close();
         verify(this.closeTask).accept(exchange);
         verify(newSession).invalidate();
+        verify(this.suspendedBatch).resumeWithContext();
+        verify(context).close();
+        verifyNoMoreInteractions(this.suspendedBatch);
     }
 }
